grammar.txt
program             = { stmt }, EOF;

stmt                = simpleStmt | compoundStmt | flowStmt;

simpleStmt          = exprStmt | varDecl | valDecl | assignment;

exprStmt            = expr, ";";

varDecl             = 'var', IDENTIFIER, [ "=", expr ], ";";

valDecl             = 'val', IDENTIFIER, "=", expr, ";";

assignment          = expr, "=", expr, ";";

compoundStmt		= whileStmt | forStmt;

flowStmt            = breakStmt | continueStmt | returnStmt;

whileStmt           = 'while', expr, blockStmt;

forStmt             = 'for', [ simpleStmt ], ";", [ expr ], ";", [ assignment ], blockStmt;

blockStmt			= "{", stmtList, "}";

breakStmt           = 'break', ";";

continueStmt        = 'continue', ";";

returnStmt          = 'return', [ expr ], ";";

parameters          = IDENTIFIER, { ",", IDENTIFIER };

stmtList            = { stmt, ";" };

expr                = ifExpr | lambda | logicOr;

ifExpr 			    = 'if', expr, blockExpr, [ 'else', ( ifExpr | blockExpr ) ];

blockExpr           = "{", stmtList, "}";

lambda			    = 'fun', [ parameters ], "->", ( expr | blockStmt );

logicOr             = logicAnd, { 'or', logicAnd };

logicAnd            = equality, { 'and', equality };

equality            = comparison, { ( "==" | "!=" ), comparison };

comparison          = arithExpr, { ( "<" | "<=" | ">" | ">=" ), arithExpr };

arithExpr           = term, { ( "+" | "-" ), term };

term                = factor, { ( "*" | "/" ), factor };

factor              =  ['!' | '-'], primaryEpxr;

primaryEpxr		    = primary, { call };

primary             = ( literal | IDENTIFIER, ['++' | '--'] | "(", expr, ")" | 
                       "{", [ dictItems ], "}" | "[", [ argList ], "]" );

call                = ( "(", [argList], ")" | "[", expr, "]" | ".", IDENTIFIER );

argList             = expr, {",", expr};

dictItems		    = STRING, ":", expr, { ",", dictItems };

literal             = 'true' | 'false' | 'nil' | STRING | NUMBER;

NUMBER              = DIGIT { DIGIT }, [".", { DIGIT }];

DIGIT               = ? "0" ... "9" ?;

STRING              = '"' <any char expect '"'>* '"';

IDENTIFIER          = ALPHA { ALPHA | DIGIT };

ALPHA               = ? "a" ... "z" ? | ? "A" ... "Z" ? | "_";
